hphp/hack/test/typecheck/disallow_array/literal2.php
<?hh // partial

class C {
  const ARR = array('foo' => 'bar');
}
